- Added an exclusion to gameplayoptions.xml that allows for the customisation of the limbs that are permitted for Redliner and Cyber Singularity Seeker. Closes #1168
- Weapons mounted on vehicles in create mode can now switch the dicepool calculation method they use between character skill, remote-operated gunnery and dogbrain, among others. Closes #3801

Application Fixes:

- Fixed issues with the SelectSpell improvement not being properly available in the improvements window.
- Fixed a regression in the behaviour of the cyberadeptdaemon improvement that prevented Resonance being awarded for fractional losses of Essence. In effect, this improvement was only being counted if you had an integer value of CyberwareEssence. Your Resonance will be adjusted on next Submersion, or if you activate the Reapply Improvements menu option.
- Fixed an issue where attempting to edit a basic lifestyle would cause the lifestyle level to not get properly saved.
- Changing priorities or metatypes in Create mode will no longer reset all points and karma put into attributes.
- Fixed a bug where special attributes would not update properly with changes to the Special priority category.
- Fixed a UI issue where tooltips to improve attributes or skills that are at their maximum rating would show the regular improvement tooltip with a karma cost of -1 instead of a message saying that the item is at its maximum. Closes #3664.
- Fixed an issue where the GenetechCostMultiplier improvement would not work properly. Part of #3741.
- Fixed issues where certain options in the Options screen would have their text cut off. Closes #3716.
- Fixed an issue where the screen to select a Complex Form did not pay attention to Complex Form requirements, e.g. technomancer streams. Closes #3718.
- Fixed an issue where changing Metatype priorities would not update the Special Attributes amount properly.