@@ -5,6 +5,7 @@ Application Changes:
 - Added a genetechessmultiplier improvement type that allows for the modification of genetech essence costs in a similar manner to the biowareessmultiplier improvement.
 - Added an exclusion to gameplayoptions.xml that allows for the customisation of the limbs that are permitted for Redliner and Cyber Singularity Seeker. Closes #1168
 - Weapons mounted on vehicles in create mode can now switch the dicepool calculation method they use between character skill, remote-operated gunnery and dogbrain, among others. Closes #3801
+- Added a validity check for Adepts to ensure that they're not over their powerpoint maximum when moving into career mode.
 
 Application Fixes:
 
@@ -107,6 +108,7 @@ New Strings:
 - String_DescEssence
 - String_DescDamaging
 - String_DescObject
+- Message_InvalidPowerPoints
 
 Changed Strings:
 
